--- a/src/components/HousingInfos/housingInfos.scss
+++ b/src/components/HousingInfos/housingInfos.scss
@@ -72,14 +72,12 @@
     gap: 76px;
     .descriptionCollapseDiv{
       width : 100%;
-      font-size:18px;
     }
     .equipCollapseDiv {
       width: 100%;
     }
   }
 }
-
 ul {
   padding: 0;
 }
